card con sass modificado

--- a/assets/bootstrap-5.1.3/scss/_card.scss
+++ b/assets/bootstrap-5.1.3/scss/_card.scss
@@ -3,13 +3,15 @@
 //
 
 .card {
+  @extend .bg-dark;
+  @extend .text-light;
   position: relative;
   display: flex;
   flex-direction: column;
   min-width: 0; // See https://github.com/twbs/bootstrap/pull/22740#issuecomment-305868106
   height: $card-height;
   word-wrap: break-word;
-  background-color: $card-bg;
+  // background-color: $card-bg;
   background-clip: border-box;
   border: $card-border-width solid $card-border-color;
   @include border-radius($card-border-radius);
